force-app/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <label>Employment History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>