force-app/main/default/objects/Employment_History__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment Histories</relationshipLabel>
    <relationshipName>Employment_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>