force-app/main/default/objects/Employment_History__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>