force-app/main/default/objects/Employment_History__c/fields/Employer_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contact_Info__c</fullName>
    <label>Employer Contact Info</label>
    <type>TextArea</type>
</CustomField>