force-app/main/default/objects/Employment_History__c/fields/Employer_Website__c.field-meta.xml
<CustomField>
    <fullName>Employer_Website__c</fullName>
    <label>Employer Website</label>
    <length>200</length>
    <type>Text</type>
</CustomField>