force-app/main/default/objects/Employment_History__c/fields/Employment_History_No__c.field-meta.xml
<CustomField>
    <fullName>Employment_History_No__c</fullName>
    <displayFormat>EHID-{0000}</displayFormat>
    <label>Employment History No</label>
    <type>AutoNumber</type>
</CustomField>