force-app/main/default/objects/Employment_History__c/fields/JobDuties__c.field-meta.xml
<CustomField>
    <fullName>JobDuties__c</fullName>
    <label>JobDuties</label>
    <length>120</length>
    <type>Text</type>
</CustomField>