force-app/main/default/objects/Employment_History__c/fields/PermissionToContact__c.field-meta.xml
<CustomField>
    <fullName>PermissionToContact__c</fullName>
    <label>PermissionToContact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>