force-app/main/default/objects/Employment_History__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <label>Position Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>