force-app/main/default/objects/Employment_History__c/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <label>Position Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>